--- a/app/build.gradle
+++ b/app/build.gradle
@@ -258,7 +258,7 @@ if (releaseKeystorePassword != null && releaseKeyAlias != null && releaseKeyPass
 def signingConfigFromFile() {
   println '-> signingConfigFromFile'
   def Properties props = new Properties()
-  def propFile = file('signing.properties')
+  def propFile = file('../signing.properties')
 
   if (propFile.canRead()) {
     props.load(new FileInputStream(propFile))
