--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     maven { url "https://jitpack.io" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.0-beta3'
+    classpath 'com.android.tools.build:gradle:2.1.0'
     classpath 'io.fabric.tools:gradle:1.19.2'
     classpath 'com.google.gms:google-services:2.0.0-alpha9'
   }
