--- a/app/build.gradle
+++ b/app/build.gradle
@@ -244,7 +244,7 @@ dependencies {
 
 play {
   jsonFile = file('../gplay-secret.json')
-  track = 'beta'
+  track = 'production'
 }
 
 def (releaseKeystorePassword, releaseKeyAlias, releaseKeyPassword) = signingConfigFromFile()
