--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.1.0'
     classpath 'io.fabric.tools:gradle:1.19.2'
     classpath 'com.google.gms:google-services:2.0.0-alpha9'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
   }
 }
 
