--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,13 +164,13 @@ dependencies {
   compile('com.mikepenz:aboutlibraries:5.2.2@aar') {
     transitive = true
   }
-  compile('com.mikepenz:materialdrawer:5.1.5@aar') {
+  compile('com.mikepenz:materialdrawer:5.2.5@aar') {
     transitive = true
   }
-  compile('com.github.afollestad.material-dialogs:core:0.8.5.3@aar') {
+  compile('com.github.afollestad.material-dialogs:core:0.8.5.8@aar') {
     transitive = true
   }
-  compile('com.github.afollestad.material-dialogs:commons:0.8.5.3@aar') {
+  compile('com.github.afollestad.material-dialogs:commons:0.8.5.8@aar') {
     transitive = true
   }
   compile('com.crashlytics.sdk.android:answers:1.3.6@aar') {
@@ -214,7 +214,9 @@ dependencies {
   compile 'com.github.alorma:diff-textview:1.3.0'
   compile 'com.github.gabrielemariotti.changeloglib:changelog:2.0.0'
   compile 'com.timehop.stickyheadersrecyclerview:library:0.4.2@aar'
-  compile 'com.afollestad:material-cab:0.1.4'
+  compile('com.afollestad:material-cab:0.1.11@aar') {
+    transitive = true
+  }
   compile 'com.github.pedrovgs:renderers:2.0.3'
   compile 'com.jakewharton:butterknife:7.0.1'
   compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
