--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,8 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 23
-    versionName "2.13.1"
-    versionCode 213001
+    versionName "2.14.0"
+    versionCode 214000
     resValue "string", "app_git_hash", getCurrentGitHash()
 
     multiDexEnabled true
@@ -243,6 +243,8 @@ dependencies {
   compile 'com.google.firebase:firebase-invites:9.0.0'
   compile 'com.google.firebase:firebase-messaging:9.0.0'
   compile 'com.google.firebase:firebase-crash:9.0.0'
+
+  compile 'com.alorma:tapmoc:0.0.1-Alpha'
 }
 
 play {
