--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ android {
   defaultConfig {
     minSdkVersion 15
     targetSdkVersion 23
-    versionName "2.13.2"
-    versionCode 213002
+    versionName "2.14.0"
+    versionCode 214000
     resValue "string", "app_git_hash", getCurrentGitHash()
 
     multiDexEnabled true
@@ -248,6 +248,8 @@ dependencies {
   compile 'com.google.firebase:firebase-invites:9.0.0'
   compile 'com.google.firebase:firebase-messaging:9.0.0'
   compile 'com.google.firebase:firebase-crash:9.0.0'
+
+  compile 'com.alorma:tapmoc:0.0.1-Alpha'
 }
 
 play {
