--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
             android:theme="@style/AppTheme.Search" />
         <activity android:name=".ui.activity.FileActivity" />
         <activity android:name=".ui.activity.ContentCommitsActivity" />
-        <activity android:name=".ui.activity.OrganizationActivity" />
+        <activity android:name=".ui.activity.OrganizationActivity"
+            />
         <activity android:name=".ui.activity.ReleaseDetailActivity" />
         <activity android:name=".ui.activity.LanguagesActivity" />
         <activity android:name=".ui.activity.gists.GistEditorActivity" />
