--- a/app/build.gradle
+++ b/app/build.gradle
@@ -162,7 +162,7 @@ dependencies {
   compile project(':sdks:GithubAndroidSdk')
   compile project(':sdks:GithubReborn')
 
-  compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+  compile('com.crashlytics.sdk.android:crashlytics:2.5.6@aar') {
     transitive = true;
   }
 
@@ -179,7 +179,7 @@ dependencies {
   compile('com.github.afollestad.material-dialogs:commons:0.8.5.8@aar') {
     transitive = true
   }
-  compile('com.crashlytics.sdk.android:answers:1.3.6@aar') {
+  compile('com.crashlytics.sdk.android:answers:1.3.7@aar') {
     transitive = true;
   }
 
@@ -193,7 +193,7 @@ dependencies {
   apt "com.google.dagger:dagger-compiler:2.4"
   compile "com.google.dagger:dagger:2.4"
 
-
+  compile 'com.pddstudio:highlightjs-android:1.0.1'
 
   compile('com.github.ZieIony:NaturalDateFormat:-SNAPSHOT') {
     exclude group: "joda-time"
