--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,9 @@
             android:label="@string/title_activity_new_issue"
             android:windowSoftInputMode="adjustPan" />
         <activity
+            android:name=".ui.activity.NewContentActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".ui.activity.IssueDetailActivity"
             android:exported="true" />
         <activity
